--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Đăng ký trực cơm — Bảng tuần</title>
 
 <style>
-  :root{
+  :root {
     --bg:#071021; --card:#0b1220; --accent:#6b46c1; --muted:#9aa4b2; --text:#e6eef6;
     --accent2:#3b82f6; --danger:#ef4444;
   }
@@ -34,6 +34,21 @@
   .admin-panel{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   .small{font-size:13px;color:var(--muted)}
   #statusBanner{padding:10px;text-align:center;border-radius:8px;margin-bottom:10px;font-weight:600}
+  [title]{position:relative}
+  [title]:hover::after{
+    content:attr(title);
+    position:absolute;
+    bottom:120%;
+    left:50%;
+    transform:translateX(-50%);
+    background:#111;
+    color:#fff;
+    font-size:12px;
+    padding:4px 8px;
+    border-radius:4px;
+    white-space:nowrap;
+    opacity:0.9;
+  }
   @media(max-width:1100px){ .board{grid-template-columns:repeat(3, 1fr)} }
   @media(max-width:720px){ .board{grid-template-columns:repeat(1, 1fr)} header{flex-direction:column;align-items:flex-start} }
 </style>
@@ -59,7 +74,7 @@
 <div class="board-wrap"><div id="board" class="board"></div></div>
 <footer>Ghi chú: Bấm "Đăng ký" → nhập tên. Bấm ❌ để xóa tên của chính bạn (hoặc Admin có thể xóa bất kỳ tên nào). Hệ thống cập nhật realtime.</footer>
 
-<!-- Firebase SDK -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
 
@@ -80,7 +95,6 @@
   const manualOpenRef = db.ref('manualOpen');
   const blacklistRef = db.ref('nameBlacklist');
   const adminNoteRef = db.ref('adminNote');
-
   let manualOpen = false;
 
   const days = [
@@ -235,13 +249,10 @@
 
   adminBtn.onclick = () => {
     const pass = prompt('Nhập mật khẩu Admin:');
-    if (pass === ADMIN_PASSWORD) {
-      alert('✅ Đã đăng nhập Admin');
-      setAdminMode(true);
-    } else alert('❌ Sai mật khẩu');
+    if (pass === ADMIN_PASSWORD) { alert('✅ Đã đăng nhập Admin'); setAdminMode(true); }
+    else alert('❌ Sai mật khẩu');
   };
   logoutBtn.onclick = () => { alert('🚪 Đã đăng xuất'); setAdminMode(false); };
-
   resetBtn.onclick = () => {
     if (!confirm('Reset toàn bộ lịch tuần?')) return;
     const updates = {};
@@ -253,7 +264,6 @@
   };
   if (sessionStorage.getItem('isAdmin') === 'true') setAdminMode(true);
 
-  // ✅ Đã fix lỗi toggle open manual
   toggleOpenBtn.onclick = async () => {
     const newState = !manualOpen;
     await manualOpenRef.set(newState);
@@ -308,7 +318,6 @@
       statusBanner.textContent = "🔒 Ngoài giờ đăng ký (sẽ mở 19:50 Thứ 6)";
     }
   }
-
   updateButtonStates();
   setInterval(updateButtonStates, 60000);
 </script>
@@ -329,13 +338,13 @@
     height: 42px;
     background: linear-gradient(135deg, #6b46c1, #3b82f6);
     color: white;
-    font-size: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     cursor: pointer;
     z-index: 1100;
+    font-size: 18px;
   }
   #adminNoteBox {
     position: fixed;
@@ -364,13 +373,23 @@
     margin-bottom: 8px;
     display: none;
   }
-  #adminNoteDisplay { font-size: 14px; color: #d1d5db; white-space: pre-wrap; }
+  #adminNoteDisplay {
+    font-size: 14px;
+    color: rgba(209,213,219,0.5);
+    white-space: pre-wrap;
+    transition: opacity 0.3s ease;
+  }
+  #adminNoteDisplay.hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 </style>
 
 <script>
   const adminNoteToggle = document.getElementById("adminNoteToggle");
   const adminNoteBox = document.getElementById("adminNoteBox");
   const adminNoteInput = document.getElementById("adminNoteInput");
+  const adminNoteDisplay = document.getElementById("adminNoteDisplay");
   const adminNoteText = document.getElementById("adminNoteText");
   let noteVisible = false;
 
@@ -385,14 +404,26 @@
   };
 
   adminNoteRef.on("value", snap => {
-    const val = snap.val() || "Không có ghi chú nào";
-    adminNoteText.textContent = val;
-    adminNoteInput.value = val;
+    const val = snap.val();
+    if (!val || val.trim() === "") {
+      adminNoteText.textContent = "Không có ghi chú nào";
+      adminNoteDisplay.classList.remove("hidden");
+      adminNoteInput.value = "";
+    } else {
+      adminNoteText.textContent = val;
+      adminNoteDisplay.classList.add("hidden");
+      adminNoteInput.value = val;
+    }
   });
 
   adminNoteInput.addEventListener("input", () => {
     if (!sessionStorage.getItem("isAdmin")) return;
     adminNoteRef.set(adminNoteInput.value.trim());
+    if (adminNoteInput.value.trim() === "") {
+      adminNoteDisplay.classList.remove("hidden");
+    } else {
+      adminNoteDisplay.classList.add("hidden");
+    }
   });
 </script>
 </body>
