--- a/index.html
+++ b/index.html
@@ -583,23 +583,15 @@
 
 
   function isRegistrationOpen() {
-
-    if (manualOpen) return true;
-
-    const now = new Date();
-
-    const day = now.getDay();
-
-    const hour = now.getHours();
-
-    const minute = now.getMinutes();
-
-    return (day === 5 && (hour > 19 || (hour === 19 && minute >= 50))) ||
-
-           (day === 6 && (hour < 21 || (hour === 21 && minute === 0)));
-
-  }
-
+    console.log("Manual Open status (Client): ", manualOpen); // DÒNG CODE DEBUG
+    if (manualOpen) return true;
+    const now = new Date();
+    const day = now.getDay();
+    const hour = now.getHours();
+    const minute = now.getMinutes();
+    return (day === 5 && (hour > 19 || (hour === 19 && minute >= 50))) ||
+           (day === 6 && (hour < 21 || (hour === 21 && minute === 0)));
+  }
 
 
  function updateButtonStates() {
@@ -903,3 +895,4 @@
 </body>
 
 </html>
+
